[package]
name = "mould-auth"
version = "0.0.11"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
readme = "README.md"
description = "Authorization services for Mould framework."
repository = "https://github.com/DenisKolodin/mould-auth"
license = "MIT/Apache-2.0"

[dependencies]
mould = "0.0.22"
permission = "0.1.0"
serde_json = "1.0.0"
